--- a/assets/css/universal.css
+++ b/assets/css/universal.css
@@ -109,3 +109,18 @@ body footer button.page-btn:hover {
     box-shadow: inset 12px 12px 24px #303030,
                 inset -12px -12px 24px #4a4a4a;
 }
+
+.rotate {
+    animation-name: rotate-animation;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+}
+
+@keyframes rotate-animation {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
